# taco

./: CMakeLists.txt  README.md  run.sh  sort.c  流程.docx  流程图.ppt
apps/: CMakeLists.txt
apps/mat-transpose/: CMakeLists.txt  mat-transpose.cpp
apps/tensor_012/: CMakeLists.txt  run.sh  tensor_transpose.cpp
apps/tensor_021/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_102/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_120/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_201/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_210/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_3_fusion/: CMakeLists.txt  run.sh  tensor_transpose.cpp
apps/tensor_3_radix/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_4_fusion/: .tensor_transpose.cpp.swm  .tensor_transpose.cpp.swn  .tensor_transpose.cpp.swo  .tensor_transpose.cpp.swp  CMakeLists.txt  tensor_transpose.cpp  up.tns
apps/tensor_4_radix/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_5/: .tensor_transpose.cpp.swp  1.tns  CMakeLists.txt  run.sh  tensor_transpose.cpp
apps/tensor_5_fusion/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_times_vector/: run.sh
apps/tensor_transpose/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_transpose_coo/: CMakeLists.txt  tensor_transpose.cpp
include/: .sort.h.swp  fluxsort.h  quadsort.h  sort.h  sort3.h  sort4.h  wolfsort.h
include/taco/: coo_transpose.h  matrix_transpose.h  transpose.h
research/benchmark/: 10.tns  11.tns  12.tns  13.tns  matmul_4-4-4.tns
src/: CMakeLists.txt
src/transpose/: bucket.cpp  count.cpp  difforder.cpp  halfperm.cpp  qsort.cpp  radix.cpp  (+2 more)
test/: test_tensors.cpp  test_tensors.h  tests-mat_transpose.cpp  tests-transpose_3tensors_transposing.cpp
(+5 files in other folders)
